Ajusta interface e implementa parte da funcionalidade

--- a/busca-heuristica/tsconfig.json
+++ b/busca-heuristica/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
-      "target": "es6",
-      "module": "none",
-  }
+      "target": "ES6",
+      "module": "ESNext",
+      "lib": ["DOM", "DOM.Iterable", "ESNext"],
+  },
+  "compileOnSave": true
  }
